--- a/book/print.html
+++ b/book/print.html
@@ -47,7 +47,7 @@
         </script>
 
         <div id="sidebar" class="sidebar">
-            <ul class="chapter"><li class="affix"><a href="./01_about.html">About this book</a></li><li class="affix"><a href="./02_introduction.html">Introduction</a></li><li><a href="./01_basics/00_basics.html"><strong>1.</strong> Before the Basics</a></li><li><ul class="section"><li><a href="./01_basics/01_what_is_cli.html"><strong>1.1.</strong> What is a CLI?</a></li><li><a href="./01_basics/02_story_of_wc.html"><strong>1.2.</strong> The Story of wc</a></li><li><a href="./01_basics/03_lessons_learned.html"><strong>1.3.</strong> Lessons Learned</a></li><li><a href="./01_basics/04_env_vars.html"><strong>1.4.</strong> Environmental Variables</a></li><li><a href="./01_basics/05_asking.html"><strong>1.5.</strong> Asking and Prompting</a></li><li><a href="./01_basics/06_configs.html"><strong>1.6.</strong> Configuration Files</a></li><li><a href="./01_basics/07_arg_parse.html"><strong>1.7.</strong> Argument Parsing</a></li><li><a href="./01_basics/08_combo.html"><strong>1.8.</strong> Combinations</a></li></ul></li><li><a href="./02_real_basics/00_real_basics.html"><strong>2.</strong> The Basics</a></li><li><ul class="section"><li><a href="./02_real_basics/01_the_start.html"><strong>2.1.</strong> Preface</a></li><li><a href="./02_real_basics/02_flags.html"><strong>2.2.</strong> Flags</a></li><li class="spacer"></li></ul></li><li><a href="./03_contributors.html">Contributors</a></li><li class="affix"><a href="./04_LICENSE.html">License</a></li></ul>
+            <ul class="chapter"><li class="affix"><a href="./01_about.html">About this book</a></li><li class="affix"><a href="./02_introduction.html">Introduction</a></li><li><a href="./01_basics/00_basics.html"><strong>1.</strong> Before the Basics</a></li><li><ul class="section"><li><a href="./01_basics/01_what_is_cli.html"><strong>1.1.</strong> What is a CLI?</a></li><li><a href="./01_basics/02_story_of_wc.html"><strong>1.2.</strong> The Story of wc</a></li><li><a href="./01_basics/03_lessons_learned.html"><strong>1.3.</strong> Lessons Learned</a></li><li><a href="./01_basics/04_env_vars.html"><strong>1.4.</strong> Environmental Variables</a></li><li><a href="./01_basics/05_asking.html"><strong>1.5.</strong> Asking and Prompting</a></li><li><a href="./01_basics/06_configs.html"><strong>1.6.</strong> Configuration Files</a></li><li><a href="./01_basics/07_arg_parse.html"><strong>1.7.</strong> Argument Parsing</a></li><li><a href="./01_basics/08_combo.html"><strong>1.8.</strong> Combinations</a></li></ul></li><li><a href="./02_real_basics/00_real_basics.html"><strong>2.</strong> The Basics</a></li><li><ul class="section"><li><a href="./02_real_basics/01_the_start.html"><strong>2.1.</strong> Preface</a></li><li><a href="./02_real_basics/01_flags/00_flags.html"><strong>2.2.</strong> Flags</a></li><li><ul class="section"><li><a href="./02_real_basics/01_flags/01_short_form.html"><strong>2.2.1.</strong> Short Form</a></li><li><a href="./02_real_basics/01_flags/02_long_form.html"><strong>2.2.2.</strong> Long Form</a></li><li><a href="./02_real_basics/01_flags/03_alt_long_form.html"><strong>2.2.3.</strong> Alt. Long Form</a></li><li><a href="./02_real_basics/01_flags/04_combinations.html"><strong>2.2.4.</strong> Combinations</a></li><li><a href="./02_real_basics/01_flags/05_more_than_bool.html"><strong>2.2.5.</strong> Not Just a Bool</a></li><li><a href="./02_real_basics/01_flags/06_communication.html"><strong>2.2.6.</strong> Say What?</a></li><li><a href="./02_real_basics/01_flags/07_practicals.html"><strong>2.2.7.</strong> Practical Examples</a></li></ul></li><li><a href="./02_real_basics/02_flags.html"><strong>2.3.</strong> Positional / Free Args</a></li><li><a href="./02_real_basics/02_flags.html"><strong>2.4.</strong> Options</a></li><li><a href="./02_real_basics/02_flags.html"><strong>2.5.</strong> Sub-Commands</a></li><li><a href="./02_real_basics/02_flags.html"><strong>2.6.</strong> Requirements</a></li><li><a href="./02_real_basics/02_flags.html"><strong>2.7.</strong> Conflicts</a></li></ul></li><li><a href="./03_using_clap/00_using_clap.html"><strong>3.</strong> Using clap</a></li><li class="spacer"></li><li class="affix"><a href="./03_contributors.html">Contributors</a></li><li class="affix"><a href="./04_LICENSE.html">License</a></li></ul>
         </div>
 
         <div id="page-wrapper" class="page-wrapper">
@@ -171,12 +171,14 @@ File to count?: evil.txt
 <p>Before we start getting into the real code we need to first discuss some of the fundamental building blocks of argument parsing. Without these building blocks, we'll be running all willy-nilly like.</p>
 <p>Imagine a carpenter was learning to build a house, but instead of being told how to use the tools of his trade, the senior carpenter just dumped a tool bag on the ground and said, &quot;Go forth and build!&quot; Sure, some houses would get built, but the new carpenter might just end up using a hammer to emplace screws, or a machete to cut the lumber.</p>
 <p>In this chapter, I hope to give a little bit of direction about the fundamental tools of the argument parsing profession, so to speak. Luckily for us there aren't <em>that</em> many tools, in fact there's only four primary ones that we need to cover before we start really implementing these things.</p>
-<p>In no particular order, the things we'll cover are:</p>
+<p>The things we'll cover are:</p>
 <ul>
 <li>Flags</li>
-<li>Options</li>
 <li>Positional (or <em>free</em>) arguments</li>
+<li>Options</li>
 <li>Sub-commands</li>
+<li>Requirements</li>
+<li>Conflicts</li>
 </ul>
 <p>Of course, there are many more things to consider when building a CLI, but for now these are the four main tools of the trade. Interestingly, like the carpenter's tools, each of these may be able to do the job of some of the others to varying degrees of success. Here's is where I hope to teach you to drive nails with a hammer, and cut lumber with a saw.</p>
 <h2>Disclaimer</h2>
@@ -204,14 +206,14 @@ File to count?: evil.txt
 <p>Remember talking about, &quot;What data is the user trying to pass?&quot; Well when it comes to flags, they're quite simple. The only data that it passes to the program is it's presence, or lack there of.</p>
 <p>Actually, that's not <em>quite</em> true. There is another form of data a flag can pass to the program. Can you guess what it is? It's the number of occurrences. Some flags can be present multiple times, which can relay to the program a little bit more information than simply being present or not. We'll speak about this in a bit.</p>
 <p>First, let's take a look at the different forms of flags.</p>
-<h2>Short Form</h2>
+<h1>Short Form</h1>
 <p>An extremely common version of a flag is known as the <em>short form</em>, or <em>short</em> for short (sorry). In this form, a single hyphen is used, followed by a single character, such as the <code>-a</code> or <code>-Z</code> above.</p>
 <p>A good example is the very common convention to use the uppercase <code>V</code> character as the short form in order to tell a program to print it's version number and then exit.</p>
 <p>Try this with <code>rustc</code> to see an example.</p>
 <pre><code>$ rustc -V
 rustc 1.8.0 (db2939409 2016-04-11)
 </code></pre>
-<h3>Short Form Conventions</h3>
+<h2>Short Form Conventions</h2>
 <p>First, prefer lower-case characters to upper case. In most languages, an upper-case character requires an additional key to be pressed.</p>
 <p>Prefer</p>
 <pre><code>$ program -a
@@ -222,7 +224,15 @@ rustc 1.8.0 (db2939409 2016-04-11)
 <p>There is an exception to this guidance that we'll see in just a minute.</p>
 <p>The second thing to consider, is the language of keyboard your program is most likely to be used with. If your program is region specific to a certain area of the world, where a particular keyboard is common, pick characters that only require a single key press to achieve. If possible, and the language allows, prefer ASCII characters to unicode characters. If the program is not designed to be used in parts of the world with Western Latin character sets (such as English), this point can safely be ignored. If there is a possibility for the program to be used in areas with Western Latin character sets, it's common for the keyboard keyboards to ship with only a limited (if any) unicode support. ASCII is a safe bet.</p>
 <p>Finally, one should acknowledge that there is a relatively small number of possibilities for the short form of a flag. Especially in ASCII only contexts. We'll come back to this note after we talk about the <em>long form</em>.</p>
-<h2>Long Form</h2>
+<h2>Combining Short Forms</h2>
+<p>This is not really a form, but a decently common convention supported by many CLIs. It allows short form flags to be combined with only a single hyphen, instead of having to re-type the hyphen (and a space) with each one. An example would be</p>
+<pre><code>$ program -aZBd
+</code></pre>
+<p>Being the equivalent of</p>
+<pre><code>$ program -a -Z -B -d
+</code></pre>
+<p>While this form may not look super readable, when using many flags it's far nice to type. Especially, consider if each of those flags only had long forms! Yuck. Again, this isn't always supported, but I'd suggest giving it some thought as it can make the end user experience that much nicer. The main thing to consider is that, like stated above, it doesn't work when the alternate long form is desired. Otherwise <code>-flag</code> would be ambiguous as to whether or not it should be parsed as a long or form, or as <code>-f -l -a -g</code>.</p>
+<h1>Long Form</h1>
 <p>The <em>long form</em> or <em>long</em> for short (sorry again), is just as common as the short form. The long form typically preceded by two hyphens <code>--</code> and one or more (usually more) characters. <code>--flag</code> was the example given above. The long form is often used because it says a little more about the flag <em>to the user</em>.</p>
 <p>This is a very important note, and the first time we've seen it thus far. While designing a CLI, it's often helpful to think <em>as the user</em> rather than as the program. I can't stress this enough. Seeing that a program should be invoked as, <code>program -e</code> probably doesn't convey much about what that flag is doing. But seeing <code>program --exclude-directories</code> says far more.</p>
 <p>This is why you'll often see the long form used in conjunction with the short form in order to say the same thing, or pass the same data to the program.</p>
@@ -237,7 +247,7 @@ rustc 1.8.0 (db2939409 2016-04-11)
     -V --version        Print version info and exit
  # [...]
 </code></pre>
-<h3>Long Form Conventions</h3>
+<h2>Long Form Conventions</h2>
 <p>It's usually a good idea to use only lower-case characters when thinking of long form flags. Of course, there may be times when it's appropriate to have an upper-case character, but this should be the exception and not the rule.</p>
 <p>It's also possible to have compound, or multiple words in a long form flag, although one must use a character other than a space as the separator. It's convention to use the hyphen character.</p>
 <p>Prefer</p>
@@ -258,7 +268,9 @@ rustc 1.8.0 (db2939409 2016-04-11)
     -v --verbose        Use verbose output
 </code></pre>
 <p>Remember way back when I said there was a limited number of short forms a flag could take? If a program has a large number of flags, not every flag needs a short <em>and</em> long form. Not all long forms need to share a character with the short form. In fact, not all flags even need a short form (which is arguably the more limited form).</p>
-<h3>Combining Long and Short Forms</h3>
+<h1>Alternate Long Forms</h1>
+<p>There is another version of the long form, which uses a single hyphen followed by two or more characters. In the example <em>all</em> the way the top, <code>-flag</code> was used. This form is far less common today, but still appears from time to time. We won't spend much time talking about this form, and in fact I would recommend avoiding it all together. This is because it's mutually exclusive with the next item on our list, which in my opinion is far more useful and common.</p>
+<h1>Combining Long and Short Forms</h1>
 <p>Attempt to prioritize common flags, or flags which you believe will be used the most. The prioritization I use is, from most use, to least use:</p>
 <ul>
 <li>Both long and short form, short form has a shared lower-case character</li>
@@ -270,17 +282,7 @@ rustc 1.8.0 (db2939409 2016-04-11)
 <li>Short form only, upper-case character</li>
 </ul>
 <p>It's also a good practice to do a little forward thinking and try to reserve short forms for common flags you may not have implemented yet, but intend to. Adding a short form to a later version doesn't break backwards compatibility, but changing or removing a short form of a flag <em>does</em> break it, and can dampen ones reputation in the worst case.</p>
-<h2>Alternate Long Forms</h2>
-<p>There is another version of the long form, which uses a single hyphen followed by two or more characters. In the example <em>all</em> the way the top, <code>-flag</code> was used. This form is far less common today, but still appears from time to time. We won't spend much time talking about this form, and in fact I would recommend avoiding it all together. This is because it's mutually exclusive with the next item on our list, which in my opinion is far more useful and common.</p>
-<h2>Combining Short Forms</h2>
-<p>This is not really a form, but a decently common convention supported by many CLIs. It allows short form flags to be combined with only a single hyphen, instead of having to re-type the hyphen (and a space) with each one. An example would be</p>
-<pre><code>$ program -aZBd
-</code></pre>
-<p>Being the equivalent of</p>
-<pre><code>$ program -a -Z -B -d
-</code></pre>
-<p>While this form may not look super readable, when using many flags it's far nice to type. Especially, consider if each of those flags only had long forms! Yuck. Again, this isn't always supported, but I'd suggest giving it some thought as it can make the end user experience that much nicer. The main thing to consider is that, like stated above, it doesn't work when the alternate long form is desired. Otherwise <code>-flag</code> would be ambiguous as to whether or not it should be parsed as a long or form, or as <code>-f -l -a -g</code>.</p>
-<h2>The Final Bit of info</h2>
+<h1>More than a Boolean</h1>
 <p>As I said before, there is actually another bit of data flags can pass to the program, vice just their presence and that's the number of times they're used. Some programs allow for a single flag to be used more than once, a common example is the <code>--verbose</code> or <code>-v</code> flag of many programs. In the case of <code>--verbose</code>, it usually means, &quot;The more times it's passed, the more verbose the output gets.&quot; i.e.</p>
 <pre><code>$ program --verbose
 </code></pre>
@@ -324,6 +326,12 @@ $ rwc evil.txt -lwb
 $ rwc -lwb --no-print-file evil.txt
  4 26 221
 </code></pre>
+<h1>Positional / Free Args</h1>
+<h1>Positional / Free Args</h1>
+<h1>Positional / Free Args</h1>
+<h1>Positional / Free Args</h1>
+<h1>Positional / Free Args</h1>
+<h1>Using clap</h1>
 <h1>Contributors</h1>
 <ul>
 <li><a href="https://github.com/kbknapp">Kevin K.</a> &lt;<a href="mailto:kbknapp@gmail.com">kbknapp@gmail.com</a>&gt;</li>
